// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBase tests ListBase centered and full divider 1`] = `
<View
  accessibilityLabel="Subtitle Title"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Caption",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="ListBase"
>
  <View
    style={
      [
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 14,
          "paddingLeft": 14,
        },
        {
          "borderTopColor": "#e2e2e4",
          "borderTopWidth": 1,
        },
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "paddingVertical": 14,
          },
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        fill="none"
        focusable={false}
        height={21}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        testID="LeftIcon"
        vbHeight={24}
        vbWidth={24}
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M9 6l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 12l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 18l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 6l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 12l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 18l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
            "flexDirection": "row",
            "gap": 14,
            "justifyContent": "space-between",
            "paddingEnd": 14,
            "paddingVertical": 7,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingVertical": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Noto Sans",
                "fontSize": 10.5,
                "fontWeight": 700,
                "lineHeight": 15,
                "textTransform": "uppercase",
              },
              {
                "color": "#44e858",
              },
              false,
              undefined,
            ]
          }
          testID="Subtitle"
        >
          Subtitle
        </Text>
        <View
          style={
            {
              "gap": 3.5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 20,
                  "verticalAlign": "middle",
                },
                {
                  "fontWeight": 400,
                },
                {
                  "color": "#2b2e33",
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="Title"
          >
            Title
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 12.25,
                  "includeFontPadding": false,
                  "letterSpacing": -0.25,
                  "lineHeight": 15,
                  "verticalAlign": "middle",
                },
                {
                  "color": "#85888e",
                },
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="CaptionText"
          >
            Caption
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
            "paddingVertical": 7,
          }
        }
      >
        <View
          style={
            {
              "paddingVertical": 7,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            fill="none"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="M5 12l5 5l10 -10"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "type": 2,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={21}
          bbWidth={21}
          fill="none"
          focusable={false}
          height={21}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 21,
                "width": 21,
              },
            ]
          }
          testID="RightIcon"
          vbHeight={24}
          vbWidth={24}
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
            <RNSVGPath
              d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListBase tests ListBase full disabled 1`] = `
<View
  accessibilityLabel="Subtitle Title"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Caption",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="ListBase"
>
  <View
    style={
      [
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 14,
          "paddingLeft": 14,
        },
        {
          "borderTopColor": "#e2e2e4",
          "borderTopWidth": 1,
        },
        {
          "opacity": 0.6,
        },
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "paddingVertical": 14,
          },
          null,
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        fill="none"
        focusable={false}
        height={21}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        testID="LeftIcon"
        vbHeight={24}
        vbWidth={24}
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M9 6l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 12l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 18l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 6l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 12l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 18l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
            "flexDirection": "row",
            "gap": 14,
            "justifyContent": "space-between",
            "paddingEnd": 14,
            "paddingVertical": 7,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingVertical": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Noto Sans",
                "fontSize": 10.5,
                "fontWeight": 700,
                "lineHeight": 15,
                "textTransform": "uppercase",
              },
              {
                "color": "#44e858",
              },
              false,
              undefined,
            ]
          }
          testID="Subtitle"
        >
          Subtitle
        </Text>
        <View
          style={
            {
              "gap": 3.5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 20,
                  "verticalAlign": "middle",
                },
                {
                  "fontWeight": 400,
                },
                {
                  "color": "#2b2e33",
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="Title"
          >
            Title
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 12.25,
                  "includeFontPadding": false,
                  "letterSpacing": -0.25,
                  "lineHeight": 15,
                  "verticalAlign": "middle",
                },
                {
                  "color": "#85888e",
                },
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="CaptionText"
          >
            Caption
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
            "paddingVertical": 7,
          }
        }
      >
        <View
          style={
            {
              "paddingVertical": 7,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            fill="none"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="M5 12l5 5l10 -10"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "type": 2,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={21}
          bbWidth={21}
          fill="none"
          focusable={false}
          height={21}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 21,
                "width": 21,
              },
            ]
          }
          testID="RightIcon"
          vbHeight={24}
          vbWidth={24}
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "type": 2,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
            <RNSVGPath
              d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListBase tests ListBase maximal config 1`] = `
<View
  accessibilityLabel="Subtitle Title"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": "Caption",
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="ListBase"
>
  <View
    style={
      [
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 14,
          "paddingLeft": 14,
        },
        {},
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "paddingVertical": 14,
          },
          {
            "alignSelf": "flex-start",
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={21}
        bbWidth={21}
        fill="none"
        focusable={false}
        height={21}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="red"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 21,
              "width": 21,
            },
          ]
        }
        testID="LeftIcon"
        vbHeight={24}
        vbWidth={24}
        width={21}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4294901760,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="M9 6l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 12l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M9 18l11 0"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 6l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 12l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
          <RNSVGPath
            d="M5 18l0 .01"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294901760,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
            testID="LeftIcon"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          {
            "flex": 1,
            "flexDirection": "row",
            "gap": 14,
            "justifyContent": "space-between",
            "paddingEnd": 14,
            "paddingVertical": 7,
          },
          {
            "borderTopColor": "#e2e2e4",
            "borderTopWidth": 1,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingVertical": 7,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "Noto Sans",
                "fontSize": 10.5,
                "fontWeight": 700,
                "lineHeight": 15,
                "textTransform": "uppercase",
              },
              {
                "color": "#44e858",
              },
              false,
              undefined,
            ]
          }
          testID="Subtitle"
        >
          Subtitle
        </Text>
        <View
          style={
            {
              "gap": 3.5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 20,
                  "verticalAlign": "middle",
                },
                {
                  "fontWeight": 400,
                },
                {
                  "color": "#2b2e33",
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="Title"
          >
            Title
          </Text>
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 12.25,
                  "includeFontPadding": false,
                  "letterSpacing": -0.25,
                  "lineHeight": 15,
                  "verticalAlign": "middle",
                },
                {
                  "color": "#85888e",
                },
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="CaptionText"
          >
            Caption
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
            "paddingVertical": 7,
          }
        }
      >
        <View
          style={
            {
              "paddingVertical": 7,
            }
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={24}
            bbWidth={24}
            fill="none"
            focusable={false}
            height={24}
            meetOrSlice={0}
            minX={0}
            minY={0}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <RNSVGGroup
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "type": 2,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
            >
              <RNSVGPath
                d="M5 12l5 5l10 -10"
                fill={null}
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                    "strokeLinejoin",
                  ]
                }
                stroke={
                  {
                    "type": 2,
                  }
                }
                strokeLinecap={1}
                strokeLinejoin={1}
                strokeWidth={2}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={21}
          bbWidth={21}
          fill="none"
          focusable={false}
          height={21}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="green"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 21,
                "width": 21,
              },
            ]
          }
          testID="RightIcon"
          vbHeight={24}
          vbWidth={24}
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278222848,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4278222848,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
            <RNSVGPath
              d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
              fill={null}
              propList={
                [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              stroke={
                {
                  "payload": 4278222848,
                  "type": 0,
                }
              }
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeWidth={2}
              testID="RightIcon"
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListBase tests ListBase minimal config 1`] = `
<View
  accessibilityLabel=" Menu Item"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="ListBase"
>
  <View
    style={
      [
        undefined,
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 14,
          "paddingLeft": 14,
        },
        {},
        false,
        false,
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "flexDirection": "row",
            "gap": 14,
            "justifyContent": "space-between",
            "paddingEnd": 14,
            "paddingVertical": 7,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "gap": 7,
            "paddingVertical": 7,
          }
        }
      >
        <View
          style={
            {
              "gap": 3.5,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Noto Sans",
                  "fontSize": 14,
                  "includeFontPadding": false,
                  "lineHeight": 20,
                  "verticalAlign": "middle",
                },
                {
                  "fontWeight": 400,
                },
                {
                  "color": "#2b2e33",
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
            testID="Title"
          >
            Menu Item
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 14,
            "paddingVertical": 7,
          }
        }
      />
    </View>
  </View>
</View>
`;
